--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,8 @@
 body {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-  color: #3f4850;
+  color: rgb(233, 220, 220);
+  background-color: black;
 }
 
 h2 {
